WIP des animations

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <a class="footer__link footer__bold" href="#">Devenir partenaire</a>
             </li>
             <li><a class="footer__link footer__light" href="#">Mentions légales</a></li>
-            <li><a class="footer__link footer__light" href="#">Contact</a></li>
+            <li><a class="footer__link footer__light" href="mailto:ohmyfood@example.com">Contact</a></li>
         </ul>
     </footer>
 </body>
