--- a/restaurants/note_enchantee.html
+++ b/restaurants/note_enchantee.html
@@ -53,7 +53,7 @@
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">ENTRÉES</h2>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longstarters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s1" type="checkbox">
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Ravioles de foie gras</h3>
@@ -66,7 +66,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longstarters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s2" type="checkbox">
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Caviar osciètre</h3>
@@ -79,7 +79,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longstarters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s3" type="checkbox">
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Homard et espuma de potiron</h3>
@@ -92,7 +92,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longstarters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s4" type="checkbox">
                     <label for="dish-selected-s4" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Foie gras de canard cuit entier</h3>
@@ -108,7 +108,7 @@
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">PLATS</h2>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longmains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m1" type="checkbox">
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Noix de coquilles Saint-Jacques</h3>
@@ -121,7 +121,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longmains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m2" type="checkbox">
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Langoustine poêlée</h3>
@@ -134,7 +134,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longmains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m3" type="checkbox">
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Mijoté de queue de bœuf</h3>
@@ -150,7 +150,7 @@
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">DESSERTS</h2>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longdesserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d1" type="checkbox">
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Macaron noisette et chocolat</h3>
@@ -163,7 +163,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longdesserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d2" type="checkbox">
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Baba au rhum revisité</h3>
@@ -176,7 +176,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--longdesserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d3" type="checkbox">
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Tarte au citron meringuée</h3>
