WIP des media queries + version tablette finalisée

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="restaurants">
             <h2 class="section__title restaurants__title">Restaurants</h2>
             <div class="restaurants__allcards">
-                <article class="restaurants__singlecard">
+                <article class="restaurants__singlecard restaurants__singlecard--palette">
                     <a class="restaurants__link restaurants__link--1" href="restaurants/palette_du_gout.html">
                         <img class="restaurants__img" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat servi au restaurant">
                         <div class="restaurants__tag restaurants__tag--1">
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="restaurants__singlecard">
+                <article class="restaurants__singlecard restaurants__singlecard--note">
                     <a class="restaurants__link restaurants__link--2" href="restaurants/note_enchantee.html">
                         <img class="restaurants__img restaurants__img--position" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat servi au restaurant">
                         <div class="restaurants__tag restaurants__tag--2">
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="restaurants__singlecard">
+                <article class="restaurants__singlecard restaurants__singlecard--francaise">
                     <a class="restaurants__link restaurants__link--3" href="restaurants/a_la_francaise.html">
                         <img class="restaurants__img" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat servi au restaurant">
                         <div class="restaurants__tag restaurants__tag--3">
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="restaurants__singlecard">
+                <article class="restaurants__singlecard restaurants__singlecard--delice">
                     <a class="restaurants__link restaurants__link--4" href="restaurants/delice_des_sens.html">
                         <img class="restaurants__img" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat servi au restaurant">
                         <div class="restaurants__tag restaurants__tag--4">
