--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <section class="explorer">
             <h2 class="explorer__title">Réservez le menu qui vous convient</h2>
             <p class="explorer__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <button class="explorer__button" type="button">
-                <a href="#nos-restaurants">Explorer nos restaurants</a>
-            </button>
+            <a class="explorer__link" href="#nos-restaurants">
+                <button class="explorer__button" type="button">Explorer nos restaurants</button>
+            </a>
         </section>
 
         <section class="fonctionnement">
