--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
         <section class="explorer">
             <h2 class="explorer__title">Réservez le menu qui vous convient</h2>
             <p class="explorer__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a class="explorer__link" href="#nos-restaurants">
-                <button class="explorer__button" type="button">Explorer nos restaurants</button>
-            </a>
+            <button class="explorer__button" type="button">Explorer nos restaurants</button>
         </section>
 
         <section class="fonctionnement">
@@ -70,7 +68,7 @@
             </div>
         </section>
 
-        <section class="restaurants" id="nos-restaurants">
+        <section class="restaurants">
             <div class="sub-restaurants">
                 <h2 class="section__title restaurants__title">Restaurants</h2>
                 <div class="restaurants__allcards">
