Fix du W3C checker des labels

--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -56,11 +56,11 @@
                 <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s1" type="checkbox">
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Tartare de poulpe acidulé</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Tartare de poulpe acidulé</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Aux zestes d'orange</p>
                             <p class="restaurant__dishdetail--bold">25€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -69,11 +69,11 @@
                 <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s2" type="checkbox">
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Velouté de légumes d'antan</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Velouté de légumes d'antan</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Carotte, panais, topinambour</p>
                             <p class="restaurant__dishdetail--bold">35€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -82,11 +82,11 @@
                 <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s3" type="checkbox">
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Soupe à l'oignon</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Soupe à l'oignon</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Revisitée</p>
                             <p class="restaurant__dishdetail--bold">20€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -98,11 +98,11 @@
                 <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m1" type="checkbox">
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Coquilles Saint-Jacques</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Coquilles Saint-Jacques</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Accompagnées d'une purée de panais</p>
                             <p class="restaurant__dishdetail--bold">40€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -111,11 +111,11 @@
                 <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m2" type="checkbox">
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Magret de canard</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Magret de canard</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Et parmentier de pommes de terre</p>
                             <p class="restaurant__dishdetail--bold">35€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -124,11 +124,11 @@
                 <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m3" type="checkbox">
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Pigeonneau d’Ille-et-Vilaine</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Pigeonneau d’Ille-et-Vilaine</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Sur son lit de gnocchis aux légumes</p>
                             <p class="restaurant__dishdetail--bold">44€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -140,11 +140,11 @@
                 <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d1" type="checkbox">
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Pétales de violettes glacés</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Pétales de violettes glacés</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Et purée de noisettes</p>
                             <p class="restaurant__dishdetail--bold">18€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -153,11 +153,11 @@
                 <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d2" type="checkbox">
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Fondant au chocolat</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Fondant au chocolat</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Revisité</p>
                             <p class="restaurant__dishdetail--bold">22€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -166,11 +166,11 @@
                 <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d3" type="checkbox">
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Millefeuille croustillant</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Millefeuille croustillant</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Myrtilles et pâte d’amande</p>
                             <p class="restaurant__dishdetail--bold">23€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -182,7 +182,7 @@
     </main>
 
     <footer>
-        <h4 class="footer__title">ohmyfood</h4>
+        <h3 class="footer__title">ohmyfood</h3>
         <ul>
             <li class="footer__proposal">
                 <i class="fa-solid fa-utensils"></i>
