--- a/restaurants/delice_des_sens.html
+++ b/restaurants/delice_des_sens.html
@@ -56,11 +56,11 @@
                 <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s1" type="checkbox">
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Tartare de thon</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Tartare de thon</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Assaisonné au yuzu</p>
                             <p class="restaurant__dishdetail--bold">25€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -69,11 +69,11 @@
                 <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s2" type="checkbox">
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Bouchée de homard croustillant</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Bouchée de homard croustillant</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Et sa farandole de petits légumes</p>
                             <p class="restaurant__dishdetail--bold">35€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -82,11 +82,11 @@
                 <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s3" type="checkbox">
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Velouté de cèpes</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Velouté de cèpes</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Aux truffes</p>
                             <p class="restaurant__dishdetail--bold">20€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -98,11 +98,11 @@
                 <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m1" type="checkbox">
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Poulet rôti aux herbes de Provence</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Poulet rôti aux herbes de Provence</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Et sa crème de truffe</p>
                             <p class="restaurant__dishdetail--bold">40€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -111,11 +111,11 @@
                 <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m2" type="checkbox">
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Langouste rôtie</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Langouste rôtie</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Et ses légumes de saison</p>
                             <p class="restaurant__dishdetail--bold">35€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -124,11 +124,11 @@
                 <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m3" type="checkbox">
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Côte de bœuf Angus</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Côte de bœuf Angus</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Et sa purée de panais</p>
                             <p class="restaurant__dishdetail--bold">44€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -140,11 +140,11 @@
                 <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d1" type="checkbox">
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Farandole de desserts</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Farandole de desserts</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Du chef</p>
                             <p class="restaurant__dishdetail--bold">18€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -153,11 +153,11 @@
                 <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d2" type="checkbox">
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Crème brulée</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Crème brulée</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Revisitée</p>
                             <p class="restaurant__dishdetail--bold">22€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -166,11 +166,11 @@
                 <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d3" type="checkbox">
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Tiramisu</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Tiramisu</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">À la noisette</p>
                             <p class="restaurant__dishdetail--bold">23€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -182,7 +182,7 @@
     </main>
 
     <footer>
-        <h4 class="footer__title">ohmyfood</h4>
+        <h3 class="footer__title">ohmyfood</h3>
         <ul>
             <li class="footer__proposal">
                 <i class="fa-solid fa-utensils"></i>
