--- a/restaurants/note_enchantee.html
+++ b/restaurants/note_enchantee.html
@@ -56,11 +56,11 @@
                 <div class="restaurant__card restaurant__card--longstarters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s1" type="checkbox">
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Ravioles de foie gras</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Ravioles de foie gras</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Accompagnées de leur crème à la truffe</p>
                             <p class="restaurant__dishdetail--bold">25€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -69,11 +69,11 @@
                 <div class="restaurant__card restaurant__card--longstarters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s2" type="checkbox">
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Caviar osciètre</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Caviar osciètre</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Sur blini à la farine de blé noir</p>
                             <p class="restaurant__dishdetail--bold">35€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -82,11 +82,11 @@
                 <div class="restaurant__card restaurant__card--longstarters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s3" type="checkbox">
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Homard et espuma de potiron</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Homard et espuma de potiron</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Marinés aux zestes d'orange</p>
                             <p class="restaurant__dishdetail--bold">20€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -95,11 +95,11 @@
                 <div class="restaurant__card restaurant__card--longstarters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s4" type="checkbox">
                     <label for="dish-selected-s4" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Foie gras de canard cuit entier</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Foie gras de canard cuit entier</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Confiture de figue et pain toasté</p>
                             <p class="restaurant__dishdetail--bold">35€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -111,11 +111,11 @@
                 <div class="restaurant__card restaurant__card--longmains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m1" type="checkbox">
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Noix de coquilles Saint-Jacques</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Noix de coquilles Saint-Jacques</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Sur lit de purée de céleri-rave</p>
                             <p class="restaurant__dishdetail--bold">40€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -124,11 +124,11 @@
                 <div class="restaurant__card restaurant__card--longmains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m2" type="checkbox">
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Langoustine poêlée</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Langoustine poêlée</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Purée de patate douce</p>
                             <p class="restaurant__dishdetail--bold">35€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -137,11 +137,11 @@
                 <div class="restaurant__card restaurant__card--longmains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m3" type="checkbox">
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Mijoté de queue de bœuf</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Mijoté de queue de bœuf</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Et riz sauvage aux zestes de citron</p>
                             <p class="restaurant__dishdetail--bold">44€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -153,11 +153,11 @@
                 <div class="restaurant__card restaurant__card--longdesserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d1" type="checkbox">
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Macaron noisette et chocolat</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Macaron noisette et chocolat</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Glace au caramel brun et sel de Guérande</p>
                             <p class="restaurant__dishdetail--bold">18€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -166,11 +166,11 @@
                 <div class="restaurant__card restaurant__card--longdesserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d2" type="checkbox">
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Baba au rhum revisité</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Baba au rhum revisité</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Avec son coulis de citron</p>
                             <p class="restaurant__dishdetail--bold">22€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -179,11 +179,11 @@
                 <div class="restaurant__card restaurant__card--longdesserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d3" type="checkbox">
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Tarte au citron meringuée</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Tarte au citron meringuée</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Déstructurée</p>
                             <p class="restaurant__dishdetail--bold">23€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -195,7 +195,7 @@
     </main>
 
     <footer>
-        <h4 class="footer__title">ohmyfood</h4>
+        <h3 class="footer__title">ohmyfood</h3>
         <ul>
             <li class="footer__proposal">
                 <i class="fa-solid fa-utensils"></i>
