--- a/restaurants/palette_du_gout.html
+++ b/restaurants/palette_du_gout.html
@@ -56,11 +56,11 @@
                 <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s1" type="checkbox">
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Fricassée d'escargots</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Fricassée d'escargots</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Au piment d'Espelette</p>
                             <p class="restaurant__dishdetail--bold">25€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -69,11 +69,11 @@
                 <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s2" type="checkbox">
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Foie gras de canard mi-cuit</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Foie gras de canard mi-cuit</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Et ses copeaux de truffe noire</p>
                             <p class="restaurant__dishdetail--bold">35€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -82,11 +82,11 @@
                 <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s3" type="checkbox">
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Oeuf au plat</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Oeuf au plat</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Assaisonné à la truffe sur lit de caviar</p>
                             <p class="restaurant__dishdetail--bold">20€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -98,11 +98,11 @@
                 <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m1" type="checkbox">
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Filet de boeuf aux herbes</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Filet de boeuf aux herbes</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Accompagné de sa ribambelle de légumes</p>
                             <p class="restaurant__dishdetail--bold">40€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -111,11 +111,11 @@
                 <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m2" type="checkbox">
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Parmentier de queue de boeuf</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Parmentier de queue de boeuf</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">À la truffe noire sur sa purée de panais</p>
                             <p class="restaurant__dishdetail--bold">35€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -124,11 +124,11 @@
                 <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m3" type="checkbox">
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Filet de turbo</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Filet de turbo</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Aux agrumes</p>
                             <p class="restaurant__dishdetail--bold">44€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -140,11 +140,11 @@
                 <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d1" type="checkbox">
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Paris-Brest</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Paris-Brest</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Revisité</p>
                             <p class="restaurant__dishdetail--bold">18€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -153,11 +153,11 @@
                 <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d2" type="checkbox">
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Macaron au chocolat d'exception</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Macaron au chocolat d'exception</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Et glace à la vanille de Madagascar</p>
                             <p class="restaurant__dishdetail--bold">22€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -166,11 +166,11 @@
                 <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d3" type="checkbox">
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
-                        <h3 class="restaurant__dish">Mousse au chocolat</h3>
-                        <div class="restaurant__dishdetail">
+                        <span class="restaurant__dish">Mousse au chocolat</span>
+                        <span class="restaurant__dishdetail">
                             <p class="restaurant__dishdetail--light">Au piment d'Espelette et à la truffe noire</p>
                             <p class="restaurant__dishdetail--bold">23€</p>
-                        </div>
+                        </span>
                     </label>
                     <div class="restaurant__card--selected">
                         <i class="fa-solid fa-circle-check"></i>
@@ -182,7 +182,7 @@
     </main>
 
     <footer>
-        <h4 class="footer__title">ohmyfood</h4>
+        <h3 class="footer__title">ohmyfood</h3>
         <ul>
             <li class="footer__proposal">
                 <i class="fa-solid fa-utensils"></i>
